2006-10-18  Richard Guenther  <rguenther@suse.de>

	Backport from mainline:
	2006-08-16  Zdenek Dvorak <dvorakz@suse.cz>

	PR gcov/profile/26570
	* gcc.dg/pr26570.c: New test.

2006-10-18  Richard Guenther  <rguenther@suse.de>

	Backport from mainline:
	2006-08-25  Nathan Sidwell  <nathan@codesourcery.com>

	PR c++/27787
	* g++.dg/template/typename10.C: New.
	* g++.dg/template/lookup4.C: Remove bogus error marker.

2006-10-17  Richard Guenther  <rguenther@suse.de>

	Backport from mainline:
	2006-05-12  Jakub Jelinek  <jakub@redhat.com>

	PR debug/26881
	* gcc.dg/debug/pr26881.c: New test.

2006-10-17  Richard Guenther  <rguenther@suse.de>

	Backport from mainline:
	2006-09-07  Andrew Pinski  <pinskia@physics.uc.edu>

	PR C++/28906
	* g++.dg/other/array3.C: New test.
	* g++.dg/other/array4.C: New test.
	* g++.dg/other/array5.C: New test.

2006-10-16  Mark Mitchell  <mark@codesourcery.com>

	PR c++/29435
	* g++.dg/template/sizeof11.C: New test.

2006-10-16  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>

	Backport:
	2006-10-14  Eric Botcazou  <ebotcazou@libertysurf.fr>

	* gcc.dg/pthread-init-2.c (dg-options): Define _POSIX_C_SOURCE=199506L
	on Solaris 2.5.1 too.

	2006-10-07  John David Anglin  <dave.anglin@nrc-cnrc.gc.ca>

	PR target/29300
	* gcc.dg/pthread-init-2.c (dg-options): Define _POSIX_C_SOURCE=199506L
	on hppa*-*-hpux*.

	2006-10-03  Uros Bizjak  <uros@kss-loka.si>

	* gcc-dg/pthread-init-common.h: Define _GNU_SOURCE. Add tests for
	PTHREAD_RECURSIVE_MUTEX_INITIALIZER_NP,
	PTHREAD_ERRORCHECK_MUTEX_INITIALIZER_NP,
	PTHREAD_ADAPTIVE_MUTEX_INITIALIZER_NP and
	PTHREAD_RWLOCK_WRITER_NONRECURSIVE_INITIALIZER_NP mutex initializers.

	2006-09-29  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>

	* gcc.dg/pthread-init-1.c, pthread-init-2.c,
	pthread-init-common.h: New.

2006-10-16  Mark Mitchell  <mark@codesourcery.com>

	PR c++/29408
	* g++.dg/parse/dtor12.C: New test.

2006-10-16  Steven G. Kargl  <kargl@gcc.gnu.org>
 
	PR fortran/29403
	* gfortran.dg/print_1.f90: New test.
