@@ -5,10 +5,3 @@ unsigned test (unsigned a, unsigned b)
 {
   return a / b;
 } /* { dg-warning "execution counts estimated" } */
-/* { dg-do compile } */
-/* { dg-options "-O2 -fprofile-generate -fprofile-use" } */
-
-unsigned test (unsigned a, unsigned b)
-{
-  return a / b;
-} /* { dg-warning "execution counts estimated" } */
